CB-99 separate directories for the different volume properties